name:                servant-todo-example
version:             0.1.0.0
license:             MIT
author:              lotz84
build-type:          Simple
cabal-version:       >=1.10

executable test
  main-is:             Main.hs
  build-depends:       base >=4.8,
                       text,
                       aeson >=0.8 && <0.9,
                       wai >=3.0 && <3.1,
                       warp >=3.0 && <3.1,
                       servant-server >=0.4 && <0.5,
                       servant-lucid,
                       lucid,
                       transformers
  default-language:    Haskell2010
